
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "ProvidernameProto";

package provider;

// The greeting service definition.
service Provider {
  // Sends a greeting
  rpc exist (existRequest) returns (existResponse) {}
  rpc account (accountRequest) returns (accountResponse) {}
  rpc storage_at (storageRequest) returns (storageResponse) {}
  rpc blockhash (blockhashRequest) returns (blockhashResponse) {}
  rpc create_contract (contractRequest) returns (contractResponse) {}
  rpc update_account (updateRequest) returns (updateResponse) {}
  rpc set_storage (setStorageRequest) returns (setStorageResponse) {}
  rpc timestamp (timestampRequest) returns (timpestampResponse) {}
  rpc block_number (Empty) returns (blocknumberResponse) {}
  rpc block_author(Empty) returns (authorResponse) {}
  rpc difficulty(Empty) returns (difficultyResponse) {}
  rpc gas_limit(Empty)  returns (gasResponse) {}
}



message Empty{

}

message blocknumberResponse{
  uint64 message =1;
}

message authorResponse{
 bytes message =1;
}
message difficultyResponse{
  bytes message=1;
}
message gasResponse{
    bytes gas=1;
}

// The request message containing the user's name.
message existRequest {
  bytes address = 1;
}

// The response message containing the greetings
message existResponse {
  bool message = 1;
}


// The request message containing the user's name.
message storageRequest {
  bytes address = 1;
  bytes key =2;
}

// The response message containing the greetings
message storageResponse {
  bytes message = 1;
}

// The request message containing the user's name.
message blockhashRequest {
  uint64 num = 1;
}

// The response message containing the greetings
message blockhashResponse {
  bytes message = 1;
}

// The request message containing the user's name.

message contractRequest {
	bytes from =1;
	bytes to =2;
	bytes gas_price=3;
	bytes gas=4;
	bytes value=5;
	bytes data=6;
	int64 nonce=7;
}

// The response message containing the greetings

message contractResponse {
  bytes txhash = 1;
}

// The request message containing the user's name.
message updateRequest {
  bytes address = 1;
  bytes balance=2;
  bytes nonce=3;
}

// The response message containing the greetings
message updateResponse {
  bool message = 1;
}

// The request message containing the user's name.
message setStorageRequest {
  bytes address = 1;
  bytes key=2;
  bytes value=3;
}

// The response message containing the greetings
message setStorageResponse {
  bool message = 1;
}



// The request message containing the user's name.
message accountRequest {
  bytes address = 1;
}

// The response message containing the greetings
message accountResponse {
  bytes balance = 1;
  bytes nonce = 2;
  bytes code = 3;

}

message timestampRequest{

}

message timpestampResponse {
 uint64  message =1;
}
